--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -24,11 +24,11 @@
     --input: 214.3 31.8% 91.4%;
     --ring: 221.2 83.2% 53.3%;
     --radius: 0.5rem;
-    --chart-1: 241 40% 38%;
-    --chart-2: 200 98% 35%;
-    --chart-3: 200 100% 38%;
-    --chart-4: 205 56% 79%;
-    --chart-5: 199 61% 93%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
     --picker-1: hsl(213, 85%, 95%);
     --picker-2: hsl(210, 55%, 81%);
     --picker-3: hsl(197, 92%, 42%);
@@ -56,6 +56,12 @@
     --border: 217.2 32.6% 17.5%;
     --input: 217.2 32.6% 17.5%;
     --ring: 224.3 76.3% 48%;
+    --radius: 0.5rem;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
   }
 }
 
@@ -77,7 +83,7 @@
     @apply flex items-center justify-center md:justify-start animate-infinite-scroll *:cursor-pointer
   }
 
-  .contain{
+  .contain {
     @apply container md:px-6 lg:px-8
   }
 }
@@ -488,4 +494,17 @@
   }
 
   /* fin de estilos para el Page404 */
+
+  /* estilos del date picker pero no me funciona */
+  .custom-tooltip {
+    background-color: 'red';
+    /* Color de fondo */
+    color: #fff;
+    /* Color de texto */
+    border-radius: 0.25rem;
+    padding: 0.5rem;
+  }
+
+  /* fin de estilos del date picker */
+
 }
